# rural-medical-kiosk-ui

./: .env.local  .env.local.example  .gitignore  CLAUDE.md  COURSE_CONCEPTS.md  DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION_PLAN.md  OLLAMA_MIGRATION.md  PROJECT_WRITEUP.md  README.md  REPORTS.md  VIDEO_SCRIPT.md  VIDEO_SCRIPT_YOUTUBE.md  mkdocs.yml  package-lock.json  package.json  test_backend.sh
.next/: trace  (+6 more)
backend/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  soap_agent.py  soap_agent_ollama.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  analysis.py  chat.py  soap.py
backend/app/routers/: __init__.py  agent.py  analysis.py  chat.py  consultation.py  report.py  speech.py  test_data.py
backend/app/services/: __init__.py  analysis_service.py  chat_service.py  rag_service.py  report_service.py  safety_service.py  speech_service.py
backend/docs/: API_TIER_TROUBLESHOOTING.md  TESTING.md  TEST_RESULTS_SUMMARY.md
backend/mcp_server/: __init__.py
backend/mcp_server/tools/: __init__.py  consultation_tool.py  medgemma_tool.py  medical_tool.py  rag_tool.py  safety_tool.py  siglip_rag_tool.py  speech_tool.py
backend/qdrant_data/: meta.json
backend/scripts/: README_EMBEDDING.md  check_embedding_deps.py  embed_scin_siglip.py  ingest_scin.py  test_siglip_embedding.py
backend/tests/: __init__.py  conftest.py  integration_ollama_connection.py  test_agent_manual.py  test_e2e_workflow.py  test_full_integration.py  test_medgemma_connection.py  test_multilanguage.py  test_report_generation.py
(+104 files in other folders)
